crates/swc/tests/tsc-references/nullAssignedToUndefined.2.minified.js
//// [nullAssignedToUndefined.ts]
undefined = null; // error
 // ok, widened
